# TinyLLM

./: Cargo.toml  LICENSE  README.md
data/: tiny_shakespeare.txt
src/: attention.rs  checkpoint.rs  error.rs  lib.rs  main.rs  model.rs  tokenizer.rs  train.rs  utils.rs
src/model/: config.rs  error.rs  mod.rs
src/model/attention/: attention.rs  mod.rs  multihead.rs
src/model/layers/: embedding.rs  ffn.rs  linear.rs  mod.rs  norm.rs
src/model/positional/: learned.rs  mod.rs  positional.rs  rotary.rs  sinusoidal.rs
src/model/transformer/: block.rs  mod.rs
src/tokenizer/: bpe.rs  error.rs  mod.rs  simple.rs  tokenizer.rs
src/training/: adam.rs  checkpoint.rs  dataset.rs  metrics.rs  mod.rs  optimizer.rs  trainer.rs
src/utils/: enums.rs  io.rs  math.rs  mod.rs  sampling.rs  types.rs
