[package]
name = "tinyllm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tinyllm"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
ndarray = { version = "0.15", features = ["serde"] }  # <--- Add the "serde" feature!
rand = "0.8"
rand_distr = "0.4"
