[package]
name = "tinyllm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tinyllm"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
chrono = "0.4.41"
thiserror = "2.0.12"
tempfile = "3.3"  # For tests
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rustyline = "10.0" # For interactive mode
approx = "0.5.1"
serde_json = "1.0.141"
priority-queue = "2.5.0"
erased-serde = "0.4.6"
typetag = "0.2"
